# llmCLI

./: .env.example  .gitignore  .gitleaks.toml  .importlinter  .license-policy.json  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  Dockerfile.llm  Makefile  README.md  llmcli.example.toml  pyproject.toml  release-please-config.json
.claude/: settings.json  stack.yml
.claude-plugin/: marketplace.json  plugin.json
.claude/skills/xai-research/: SKILL.md
.github/: dependabot.yml  renovate.json
.github/workflows/: auto-merge.yml  ci.yml  contracts-bump-caller.yml  pr-title.yml  publish.yml  quadlet-lint.yml  renovate-automerge.yml
.grok/: lsp.json
artifacts/analyses/: 1-llmcli-v1-strategy-analysis.mdx  13-vllm-engine-consensus.mdx  16-llmcli-bench-analysis.mdx  34-nats-lifecycle-fold-analysis.mdx  34-nats-lifecycle-fold-consensus.mdx  47-fleet-image-supply-chain-consensus.mdx  88-lift-wait-timeout-consensus.mdx  stage-axis-audit-2026-05-20.md
artifacts/frames/: 101-proxy-misleading-no-connected-db-error-frame.mdx  103-fw-system-user-relabel-frame.mdx  12-nats-worker-frame.mdx  13-vllm-engine-backend-frame.mdx  130-unified-dynamic-v1-models-frame.mdx  16-llmcli-bench-frame.mdx  34-nats-lifecycle-fold-frame.mdx  40-llmcli-proxy-portal-frame.mdx  44-llmcli-quadlet-frame.mdx  53-stage-axis-findings-frame.mdx  54-proxy-anthropic-translate-passthrough-frame.mdx  61-fleet-lifecycle-ops-frame.mdx  99-xai-oauth-proxy-frame.mdx
artifacts/plans/: 1-llmcli-v1-plan.mdx  103-fw-system-user-relabel-plan.mdx  12-nats-worker-plan.mdx  13-vllm-engine-backend-plan.mdx  130-unified-dynamic-v1-models-plan.mdx  16-llmcli-bench-plan.mdx  34-nats-lifecycle-fold-plan.mdx  34-nats-lifecycle-fold-slice6-plan.mdx  40-llmcli-proxy-portal-plan.mdx  44-llmcli-quadlet-plan.mdx  53-stage-axis-findings-plan.mdx  54-proxy-anthropic-translate-passthrough-plan.mdx  61-fleet-lifecycle-ops-plan.mdx  82-axial-enforcement-plan.mdx  99-xai-oauth-proxy-plan.mdx
artifacts/specs/: 1-llmcli-v1-spec.mdx  103-fw-system-user-relabel-spec.mdx  12-nats-worker-spec.mdx  13-vllm-engine-backend-spec.mdx  130-unified-dynamic-v1-models-spec.mdx  16-llmcli-bench-spec.mdx  34-nats-lifecycle-fold-spec.mdx  40-llmcli-proxy-portal-spec.mdx  44-llmcli-quadlet-spec.mdx  53-stage-axis-findings-spec.mdx  54-proxy-anthropic-translate-passthrough-spec.mdx  61-fleet-lifecycle-ops-spec.mdx  99-xai-oauth-proxy-spec.mdx
deploy/: Dockerfile.llm  entrypoint-nats.sh  entrypoint.sh  install.sh  proxy-base.yaml.example  proxy.env.example  quadlet.toml  secrets-policy.toml
deploy/quadlet/: llmcli-fw-forwarder.container  llmcli-nats-worker.container  llmcli-xai-forwarder.container  llmcli.container
docs/: QUADLET-DEPLOYMENT.md  cli.md  consumers.md  uid-registry.md
docs/architecture/adr/: 001-engine-wait-ready-extraction.mdx  002-vllm-availability-check.mdx  003-engine-dispatch-registry.mdx  004-lifecycle-control-plane-nats-over-af-unix.mdx  005-nats-subject-discipline-and-machines-filter.mdx  006-axis-of-decomposition.mdx  007-digest-pinning-for-fleet-quadlet-images.mdx  meta.json
docs/deploy/: remote-worker.md
docs/guides/: claude-code-aliases.md  deployment.md  lyra-integration.md  xai-research.md
docs/guides/examples/: settings.json.local.example  settings.json.local.prod.example
docs/runbooks/: xai-oauth-reauth.md
models/: claude-sonnet-4-6.toml  kimi-k2.6.toml  qwen3-14b-q5.toml  qwen3-4b.toml  qwen3_6-35b-a3b-tq3.toml
plugins/xai-research/: README.md
scripts/: smoke_llm.py
src/llmcli/: cli.py  cli_nats.py  config.py  daemon.py  engine.py  gpu.py  litellm_config.py  providers.py  proxy_custom_auth.py
src/llmcli/auth/: __init__.py  store.py  xai_oauth.py
src/llmcli/cli/: __init__.py  _app.py  _lifecycle_nats.py  _nats_client.py  bench.py  catalog.py  chat.py  lifecycle.py  lifecycle_extra.py  proxy.py  swap.py  xai.py
src/llmcli/engines/: __init__.py  _common.py  base.py  llamacpp.py  llamacpp_tq3.py  vllm.py
src/llmcli/gpu/: __init__.py  kv.py  vram.py
src/llmcli/nats/: __init__.py  _generation.py  _lifecycle.py  _swap.py  llm_adapter.py
src/llmcli/obs/: __init__.py  otel_wiring.py
src/llmcli/proxy_forwarder/: __init__.py  _common.py  _server.py  fireworks_adapter.py  xai_adapter.py
src/llmcli/support/: __init__.py  litellm_config.py  providers.py
supervisor/conf.d/: llmcli_serve.conf
supervisor/scripts/: run_serve.sh
tests/: conftest.py  test_axial_contract.py  test_axial_drift_script.py  test_bench.py  test_bug_fixes.py  test_cli.py  test_config.py  test_daemon_serve_model.py  test_daemon_socket.py  test_engine_instance.py  test_engines_common.py  test_engines_llamacpp.py  test_fireworks_adapter.py  test_forwarder_integration.py  test_gpu.py  test_litellm_config.py  test_llamacpp.py  test_llamacpp_tq3.py  test_proxy_cmd.py  test_proxy_forwarder.py  test_proxy_runtime_imports.py  test_smoke.py  test_swap.py  test_vllm.py  test_vram_guard.py  test_xai_oauth_pkce.py
tests/cli/: conftest.py  test_lifecycle_nats.py  test_nats_client.py  test_swap_nats.py
tests/nats/: SMOKE.md  conftest.py  test_adapter.py  test_lifecycle_acl.py  test_lifecycle_crash_recovery.py  test_lifecycle_drain.py  test_lifecycle_host_filter.py  test_lifecycle_mro.py  test_lifecycle_reload_toml.py  test_lifecycle_remote_reject.py  test_lifecycle_status.py  test_lifecycle_swap.py  test_telemetry_hooks.py
tools/: MARKETPLACE.md  check_axial_drift.sh  check_healthcmd_quoting.sh  check_quadlet_manifest_install.sh  file_exemptions.txt  folder_exemptions.txt  install-hooks.sh  license_check.py  t15_e2e_probe.py  t15_fw_forwarder_probe.py  worktree-setup.sh  xai_research.py
(+4 files in other folders)
