[project]
name = "llmcli"
version = "0.1.0"
description = "Unified CLI for local LLM serving — llama.cpp + TurboQuant GGUF, OpenAI-compatible HTTP"
license = "MIT"
requires-python = ">=3.12,<3.13"
dependencies = [
    "typer[all]>=0.12",
    "httpx>=0.27",
    "pyyaml>=6.0",
    "huggingface-hub>=1.0",
    "tomli>=2.0; python_version < '3.11'",
    "tomli-w>=1.0",
    "openai>=1.0",
    "rich>=13.0",
    "nvidia-ml-py>=12.0",
]

[project.scripts]
llmcli = "llmcli.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/llmcli"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.pytest.ini_options]
pythonpath = ["src"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
markers = [
    "no_gpu: tests that do not require a GPU (safe for CI)",
    "gpu: tests that require a live GPU (skipped in CI)",
]

[dependency-groups]
dev = [
    "ruff",
    "pytest",
    "pytest-asyncio",
    "pytest-timeout>=0.5",
    "pre-commit>=4.5.1",
    "pip-licenses>=5.5.1",
    "import-linter>=2.1",
]
vllm = [
    "vllm>=0.6.0",
]
