[project]
name = "llmcli"
version = "0.1.1"
description = "Unified CLI for local LLM serving — llama.cpp + TurboQuant GGUF, OpenAI-compatible HTTP"
license = { text = "AGPL-3.0-or-later" }
requires-python = ">=3.12,<3.13"
dependencies = [
    "typer[all]>=0.12",
    "httpx>=0.27",
    "pyyaml>=6.0",
    "huggingface-hub>=1.0",
    "tomli>=2.0; python_version < '3.11'",
    "tomli-w>=1.0",
    "openai>=1.0",
    "rich>=13.0",
    "nvidia-ml-py>=12.0",
]

[project.scripts]
llmcli = "llmcli.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/llmcli"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.pytest.ini_options]
pythonpath = ["src"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
markers = [
    "no_gpu: mark test as not requiring GPU hardware (safe to run without CUDA)",
    "gpu: tests that require a live GPU (skipped in CI)",
    "nats: tests requiring a live NATS broker (skipped without service container or local nats:4222)",
]

[dependency-groups]
dev = [
    "ruff",
    "pytest",
    "pytest-asyncio",
    "pytest-timeout>=0.5",
    "pre-commit>=4.5.1",
    "pip-licenses>=5.5.1",
    "import-linter>=2.1",
    "roxabi-nats>=0.4.1",
    "roxabi-contracts>=0.4.0",
    "aioresponses>=0.7.8",
]
vllm = [
    "vllm>=0.6.0",
]

[project.optional-dependencies]
nats = [
    "nats-py>=2.6,<3",
    "nkeys>=0.1",
    "roxabi-nats",
    "roxabi-contracts",
]
proxy = [
    "litellm[proxy]>=1.0",
]

[tool.uv.sources]
roxabi-nats      = { git = "https://github.com/Roxabi/lyra.git", subdirectory = "packages/roxabi-nats",      branch = "staging" }
roxabi-contracts = { git = "https://github.com/Roxabi/lyra.git", subdirectory = "packages/roxabi-contracts", branch = "staging" }

[tool.pyright]
venvPath = "."
venv = ".venv"
include = ["src", "tests"]
pythonVersion = "3.12"
